// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartPanelBody renders with defaultProps 1`] = `
<div
  className="ax-chart-panel__body"
>
  Lorem Ipsum
</div>
`;

exports[`ChartPanelBody renders with horizontalAlign end 1`] = `
<div
  className="ax-chart-panel__body ax-chart-panel__body--horizontal-end"
>
  Lorem Ipsum
</div>
`;

exports[`ChartPanelBody renders with horizontalAlign middle 1`] = `
<div
  className="ax-chart-panel__body ax-chart-panel__body--horizontal-middle"
>
  Lorem Ipsum
</div>
`;

exports[`ChartPanelBody renders with horizontalAlign start 1`] = `
<div
  className="ax-chart-panel__body ax-chart-panel__body--horizontal-start"
>
  Lorem Ipsum
</div>
`;
